test/failing/badlist2.trunnel

struct x {
  u16 a IN [ 1, 2, 1..3000000 ];
}

